[package]
name = "rust_graceful_restart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# axum
axum = { version = "*", features = ["http2"] }
axum-server = { version = "*", features = ["tls-rustls"] }
axum-extra = { version = "*", features = ["spa"] }

tokio = { version = "*", features = [
  "rt-multi-thread",
  "macros",
  "parking_lot",
  "signal",
] }


libc = "0.2"


